# llama.cpp

./: .gitignore  CLAUDE.md  README.md  package.json
.claude/: settings.json
.claude/commands/: anno-ner.md  arxiv.md  falkordb.md  gliner.md  graph-enrichment.md  research.md
.unfinished/: llama-vocab-pruner.h  test-vocab-pruner.cpp
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  kv-compact-state.h
docs/: kv-cache-compaction-adjacent-concepts.md  kv-cache-compaction-gap-analysis.md  kv-cache-compaction-implementation-plan.md  kv-cache-compaction-rationale.md
docs/development/: STRIX_HALO_USER_STORIES.md  (+1 more)
graphrag-pipeline/: .dockerignore  Cargo.toml  Dockerfile  chunk-text.test.mjs  docker-compose.yml  extract.mjs  run.sh
graphrag-pipeline/orp-patched/: .cargo_vcs_info.json  Cargo.toml
graphrag-pipeline/orp-patched/src/: model.rs
graphrag-pipeline/sources/: flashrnn.txt
graphrag-pipeline/src/: main.rs
graphrag-pipeline/training/: PIPELINE_STATUS.md  USER_STORIES.md  export_onnx.py  generate_data.py  generate_data_inline.py  load_pretrain_data.py  requirements.txt  schema.py  train_ner.py  train_re.py
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-kv-compact.cpp  llama-kv-compact.h  llama-memory.h  llama-model.cpp  llama-model.h  llama.cpp
tests/: CMakeLists.txt  test-kv-compact-math.cpp  test-kv-compact-online.cpp
tools/: CMakeLists.txt
tools/expert-cache-test/: CMakeLists.txt  expert-cache-test.cpp
tools/kv-compact/: CMakeLists.txt  kv-compact-bench.cpp  kv-compact-math.h  kv-compact-profile.cpp  kv-compact.cpp
(+22 files in other folders)
